--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="CSS/flexboxgrid.min.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Prueba</title>
 </head>
 <body>
-    <h1>Comienzo del proyecto</h1>
+    <header class="header1" id="inicio">
+        <div class="container">
+            <div class="row middle-xs">
+                <div class="logo col-xs-12 col-md-3 center-xs start-md">
+                    <h1>Prueba</h1>
+                </div>
+                <div class="barra col-xs-12 col-md-6 center-xs">
+                    <a href="">Inicio</a>
+                    <a href="">Animes</a>
+                    <a href="">Sobre nosotros</a>
+                    <a href="">Contactos</a>
+                </div>
+                <div class="registro col-xs-12 col-md-3 center-xs end-md">
+                    <a href="">Ingresar</a>
+                    <a href="">Registrarse</a>
+                </div>
+            </div>
+        </div>
+    </header>
+    
 </body>
 </html>
